@@ -172,10 +172,6 @@ int can_move(winx_file_info *f,udefrag_job_parameters *jp)
 	if(is_in_improper_state(f))
 		return 0;
 	
-	/* skip MFT - it will be processed individually by optimize_mft() */
-	if(is_mft(f,jp))
-		return 0;
-
 	return 1;
 }
 
@@ -196,14 +192,92 @@ int can_defragment(winx_file_info *f,udefrag_job_parameters *jp)
 }
 
 /**
- * @brief Returns length of a moveable part of the file.
+ * @brief Defines whether MFT can be optimized or not.
+ */
+static int can_optimize_mft(udefrag_job_parameters *jp,winx_file_info **mft_file)
+{
+	winx_file_info *f, *file;
+	
+	if(mft_file)
+		*mft_file = NULL;
+
+	/* MFT can be optimized on NTFS formatted volumes only */
+	if(jp->fs_type != FS_NTFS)
+		return 0;
+	
+	/* MFT is not movable on systems prior to xp */
+	if(winx_get_os_version() < WINDOWS_XP)
+		return 0;
+	
+	/*
+	* In defragmentation this task is impossible because
+	* of lack of information needed to cleanup space.
+	*/
+	if(jp->job_type == DEFRAGMENTATION_JOB){
+		DebugPrint("optimize_mft: MFT optimization is impossible in defragmentation task");
+		return 0;
+	}
+	
+	/* search for $mft file */
+	file = NULL;
+	for(f = jp->filelist; f; f = f->next){
+		if(is_mft(f,jp)){
+			file = f;
+			break;
+		}
+		if(f->next == jp->filelist) break;
+	}
+	if(file == NULL){
+		DebugPrint("optimize_mft: cannot find $mft file");
+		return 0;
+	}
+	
+	/* is $mft file locked? */
+	if(is_file_locked(file,jp)){
+		DebugPrint("optimize_mft: $mft file is locked");
+		return 0;
+	}
+	
+	/* can we move something? */
+	if(!file->disp.blockmap \
+	  || !file->disp.clusters \
+	  || is_in_improper_state(file)){
+		DebugPrint("optimize_mft: no movable data detected");
+		return 0;
+	}
+	  
+	/* is MFT already optimized? */
+	if(!is_fragmented(file) || file->disp.blockmap->next == file->disp.blockmap){
+		DebugPrint("optimize_mft: $mft file is already optimized");
+		return 0;
+	}
+
+	if(mft_file)
+		*mft_file = file;
+	return 1;
+}
+
+/**
+ * @brief Returns length of a movable part of the file.
  */
 ULONGLONG get_file_length(udefrag_job_parameters *jp, winx_file_info *f)
 {
-	if(is_mft(f,jp))
-		return jp->moveable_mft_clusters;
-	else
-		return f->disp.clusters;
+	return f->disp.clusters;
+}
+
+/**
+ * @brief Sends list of $mft blocks to the debugger.
+ */
+static void list_mft_blocks(winx_file_info *mft_file)
+{
+	winx_blockmap *block;
+	ULONGLONG i;
+
+	for(block = mft_file->disp.blockmap, i = 0; block; block = block->next, i++){
+		DebugPrint("mft part #%I64u start: %I64u, length: %I64u",
+			i,block->lcn,block->length);
+		if(block->next == mft_file->disp.blockmap) break;
+	}
 }
 
 /************************************************************/
@@ -211,30 +285,192 @@ ULONGLONG get_file_length(udefrag_job_parameters *jp, winx_file_info *f)
 /************************************************************/
 
 /**
- * @brief Defragments the MFT and MFTzone, if possible.
- * @details 
- * - This routine concatenates the MFT and MFTzone pieces into one
- * contiguous string.
+ * @brief Optimizes MFT by placing its parts 
+ * after the first one as close as possible.
+ * @details We cannot adjust MFT zone, but
+ * usually it should follow optimized MFT 
+ * automatically. Also we have no need to move
+ * MFT to a different location than the one 
+ * initially chosen by the O/S, since on big 
+ * volumes it makes sense to keep it near 
+ * the middle of the disk, so the disk head
+ * does not have to move back and forth across
+ * the whole disk to access files at the back
+ * of the volume.
+ * @note As a side effect it may increase
+ * number of fragmented files.
+ * @todo Speed up.
  */
 int optimize_mft(udefrag_job_parameters *jp)
 {
-    /*
-    * if MFT or MFTzone is fragmented
-    *   1)  free as much space after the first MFT piece
-    *       to hold all the remaining MFT and MFT zone pieces
-    *   2)  place the MFT pieces after the initial MFT piece
-    *   3)  place the MFTzone after the last MFT piece
-    *
-    * finally
-    *       mark the MFT and MFTzone as processed
-    *
-    * no need to move the MFT to a different location than the one initially chosen by the O/S,
-    * since on big volumes it makes sense to keep it near the middle of the disk,
-    * so the disk head does not have to move back and forth across the whole disk
-    * to access files at the back of the volume
-    */
-    
-	return 0;
+	LONGLONG clusters_to_process; /* the number of $mft clusters not processed yet */
+	ULONGLONG start_vcn;          /* VCN of the portion of $mft not processed yet */
+	LONGLONG clusters_to_move;    /* the number of $mft clusters intended for the current move */
+	ULONGLONG start_lcn;          /* address of space not processed yet */
+	ULONGLONG time;
+	winx_volume_region *rlist = NULL, *rgn, *target_rgn;
+	winx_file_info *mft_file, *file, *first_file;
+	winx_blockmap *block, *first_block;
+	ULONGLONG end_lcn, min_lcn, next_vcn;
+	ULONGLONG current_vcn, remaining_clusters, n, lcn;
+	winx_volume_region region;
+	char buffer[32];
+	
+	jp->pi.current_operation = VOLUME_OPTIMIZATION;
+	jp->pi.moved_clusters = 0;
+	
+	if(!can_optimize_mft(jp,&mft_file))
+		return 0;
+	
+	/* open the volume */
+	// fVolume = new_winx_vopen(winx_toupper(jp->volume_letter));
+	jp->fVolume = winx_vopen(winx_toupper(jp->volume_letter));
+	if(jp->fVolume == NULL)
+		return (-1);
+
+	DebugPrint("optimize_mft: initial $mft map:");
+	list_mft_blocks(mft_file);
+	
+	time = start_timing("mft optimization",jp);
+
+	clusters_to_process = mft_file->disp.clusters - mft_file->disp.blockmap->length;
+	start_lcn = mft_file->disp.blockmap->lcn + mft_file->disp.blockmap->length;
+	start_vcn = mft_file->disp.blockmap->next->vcn;
+	while(clusters_to_process > 0){
+		if(jp->termination_router((void *)jp)) break;
+		
+		/* update list of free regions */
+		winx_release_free_volume_regions(rlist);
+		rlist = winx_get_free_volume_regions(jp->volume_letter,
+			WINX_GVR_ALLOW_PARTIAL_SCAN,NULL,(void *)jp);
+		if(rlist == NULL) break;
+		release_temp_space_regions_internal(jp);
+		
+		/* search for the first free region after start_lcn */
+		target_rgn = NULL;
+		for(rgn = rlist; rgn; rgn = rgn->next){
+			if(rgn->lcn >= start_lcn && rgn->length){
+				target_rgn = rgn;
+				break;
+			}
+			if(rgn->next == rlist) break;
+		}
+		
+		/* process file blocks between start_lcn and target_rgn */
+		if(target_rgn) end_lcn = target_rgn->lcn;
+		else end_lcn = jp->v_info.total_clusters;
+		while(1){
+			if(jp->termination_router((void *)jp)) goto done;
+			first_file = NULL; first_block = NULL; min_lcn = end_lcn;
+			for(file = jp->filelist; file; file = file->next){
+				if(can_move(file,jp)){
+					for(block = file->disp.blockmap; block; block = block->next){
+						if(block->lcn >= start_lcn && block->lcn < min_lcn && block->length){
+							first_file = file;
+							first_block = block;
+							min_lcn = block->lcn;
+						}
+						if(block->next == file->disp.blockmap) break;
+					}
+				}
+				if(file->next == jp->filelist) break;
+			}
+			if(first_file == NULL) break;
+			if(is_file_locked(first_file,jp)) continue;
+			
+			/* don't move already optimized parts of $mft */
+			if(first_file == mft_file && first_block->vcn == start_vcn){
+				if(clusters_to_process <= first_block->length \
+				  || first_block->next == first_file->disp.blockmap){
+					clusters_to_process = 0;
+					goto done;
+				} else {
+					clusters_to_process -= first_block->length;
+					start_vcn = first_block->next->vcn;
+					start_lcn = first_block->lcn + first_block->length;
+					continue;
+				}
+			}
+			
+			/* cleanup space */
+			if(rlist == NULL) goto done;
+			lcn = first_block->lcn;
+			current_vcn = first_block->vcn;
+			clusters_to_move = remaining_clusters = min(clusters_to_process, first_block->length);
+			for(rgn = rlist->prev; rgn && remaining_clusters; rgn = rgn->prev){
+				if(rgn->length > 0){
+					n = min(rgn->length,remaining_clusters);
+					if(move_file(first_file,current_vcn,n,rgn->lcn + rgn->length - n,0,jp) < 0)
+						goto done;
+					current_vcn += n;
+					remaining_clusters -= n;
+				}
+				if(rlist == NULL){
+					if(remaining_clusters)
+						goto done;
+					else
+						break;
+				}
+				if(rgn->prev == rlist->prev) break;
+			}
+			/* space cleaned up successfully */
+			region.next = region.prev = &region;
+			region.lcn = lcn;
+			region.length = clusters_to_move;
+			target_rgn = &region;
+			break;
+		}
+		
+		/* target_rgn points to the target free region, so let's move the next portion of $mft */
+		if(target_rgn == NULL) break;
+		n = clusters_to_move = min(clusters_to_process,target_rgn->length);
+		next_vcn = 0; current_vcn = start_vcn;
+		for(block = mft_file->disp.blockmap; block && n; block = block->next){
+			if(block->vcn + block->length > start_vcn){
+				if(n > block->length - (current_vcn - block->vcn)){
+					n -= block->length - (current_vcn - block->vcn);
+					current_vcn = block->next->vcn;
+				} else {
+					if(n == block->length - (current_vcn - block->vcn)){
+						if(block->next == mft_file->disp.blockmap)
+							next_vcn = block->vcn + block->length;
+						else
+							next_vcn = block->next->vcn;
+					} else {
+						next_vcn = current_vcn + n;
+					}
+					break;
+				}
+			}
+			if(block->next == mft_file->disp.blockmap) break;
+		}
+		if(next_vcn == 0){
+			DebugPrint("optimize_mft: next_vcn calculation failed");
+			break;
+		}
+		if(move_file(mft_file,start_vcn,clusters_to_move,target_rgn->lcn,0,jp) < 0){
+			/* on failures exit */
+			break;
+		}
+		/* $mft part moved successfully */
+		clusters_to_process -= clusters_to_move;
+		start_lcn = target_rgn->lcn + clusters_to_move;
+		start_vcn = next_vcn;
+	}
+
+done:
+	DebugPrint("%I64u clusters moved",jp->pi.moved_clusters);
+	winx_fbsize(jp->pi.moved_clusters * jp->v_info.bytes_per_cluster,1,buffer,sizeof(buffer));
+	DebugPrint("%s moved",buffer);
+	stop_timing("mft optimization",time,jp);
+	winx_release_free_volume_regions(rlist);
+	winx_fclose(jp->fVolume);
+	jp->fVolume = NULL;
+
+	if(jp->termination_router((void *)jp))
+		return 0;
+
+	return (clusters_to_process > 0) ? (-1) : 0;
 }
 
 /**
@@ -293,7 +529,7 @@ int defragment_small_files(udefrag_job_parameters *jp)
 			for(f = jp->fragmented_files; f; f = f->next){
 				file_length = get_file_length(jp,f->f);
 				if(file_length > length && file_length <= rgn->length){
-					if(can_defragment(f->f,jp)){
+					if(can_defragment(f->f,jp) && !is_mft(f->f,jp)){
 						f_largest = f;
 						length = file_length;
 					}
@@ -381,7 +617,7 @@ static int defragment_small_files_respect_best_matching(udefrag_job_parameters *
 		for(f = jp->fragmented_files; f; f = f->next){
 			file_length = get_file_length(jp,f->f);
 			if(file_length > length){
-				if(can_defragment(f->f,jp)){
+				if(can_defragment(f->f,jp) && !is_mft(f->f,jp)){
 					f_largest = f;
 					length = file_length;
 				}
@@ -492,7 +728,7 @@ int defragment_big_files(udefrag_job_parameters *jp)
 			f_largest = NULL, length = 0;
 			for(f = jp->fragmented_files; f; f = f->next){
 				file_length = get_file_length(jp,f->f);
-				if(file_length > length && can_defragment(f->f,jp)){
+				if(file_length > length && can_defragment(f->f,jp) && !is_mft(f->f,jp)){
 					f_largest = f;
 					length = file_length;
 				}
@@ -554,7 +790,7 @@ part_defrag_done:
 	/* mark all files not processed yet as too large */
 	for(f = jp->fragmented_files; f; f = f->next){
 		if(jp->termination_router((void *)jp)) break;
-		if(can_defragment(f->f,jp))
+		if(can_defragment(f->f,jp) && !is_mft(f->f,jp))
 			f->f->user_defined_flags |= UD_FILE_TOO_LARGE;
 		if(f->next == jp->fragmented_files) break;
 	}
@@ -640,7 +876,7 @@ try_again:
 				/* find largest not fragmented file after start_lcn which fits here */
 				largest_file = NULL; length = 0; files_found = 0;
 				for(file = jp->filelist; file; file = file->next){
-					if(can_move(file,jp) && !is_fragmented(file)){
+					if(can_move(file,jp) && !is_mft(file,jp) && !is_fragmented(file)){
 						if(file->disp.blockmap->lcn >= start_lcn \
 						  && file->disp.blockmap->lcn > rgn->lcn){
 							files_found = 1;
@@ -655,7 +891,7 @@ try_again:
 					if(file->next == jp->filelist) break;
 				}
 				if(files_found == 0){
-					/* no more moveable files after start_lcn exist */
+					/* no more movable files after start_lcn exist */
 					break; /*goto done;*/
 				}
 				if(largest_file == NULL){
@@ -695,7 +931,7 @@ try_again:
 	max_rgn_lcn = jp->v_info.total_clusters - 1;
 	for(file = jp->filelist; file; file = file->next){
 		if(jp->termination_router((void *)jp)) break;
-		if(can_move(file,jp) && !is_fragmented(file)){
+		if(can_move(file,jp) && !is_mft(file,jp) && !is_fragmented(file)){
 			if(file->disp.blockmap->lcn >= start_lcn){
 				clusters_to_move = get_file_length(jp,file);
 				rgn = find_first_free_region(jp,clusters_to_move);
@@ -721,7 +957,7 @@ try_again:
 		/* find last not fragmented file between start_lcn and end_lcn */
 		last_file = NULL; last_lcn = 0;
 		for(file = jp->filelist; file; file = file->next){
-			if(can_move(file,jp) && !is_fragmented(file)){
+			if(can_move(file,jp) && !is_mft(file,jp) && !is_fragmented(file)){
 				if(file->disp.blockmap->lcn >= start_lcn && \
 				  file->disp.blockmap->lcn < end_lcn && \
 				  file->disp.blockmap->lcn > last_lcn){
@@ -818,7 +1054,7 @@ int move_files_to_back(udefrag_job_parameters *jp, ULONGLONG start_lcn, int flag
 		/* find the first block after start_lcn */
 		first_file = NULL; first_block = NULL; min_lcn = jp->v_info.total_clusters;
 		for(file = jp->filelist; file; file = file->next){
-			if(can_move(file,jp)){
+			if(can_move(file,jp) && !is_mft(file,jp)){
 				if((flags == MOVE_FRAGMENTED) && !is_fragmented(file)){
 				} else if((flags == MOVE_NOT_FRAGMENTED) && is_fragmented(file)){
 				} else {
